# teevy

./: .drone.yml  .gitignore  NOTICE  README.md  Vagrantfile  build.sh  installdb.sh  refresh.sh
backend/: .gitignore  refresh-shared.sh  refresh-updater-hard.sh  refresh-updater.sh  refresh-webservice-hard.sh  refresh-webservice.sh
backend/database/: teevy-database.cabal
backend/database/src/Teevy/: Database.hs
backend/database/src/Teevy/Database/: Instances.hs  Models.hs  Query.hs  Show.hs  Subscription.hs  User.hs
backend/haskell-jwt/: build.sh  jwt.cabal
backend/shared/: build.sh  teevy-shared.cabal
backend/shared/src/Teevy/Shared/: Config.hs  Log.hs  TmdbConversion.hs
backend/tmdb/: tmdb.cabal
backend/tmdb/src/: Tmdb.hs
backend/tmdb/src/Tmdb/: Calls.hs  Client.hs  Instances.hs  Models.hs
backend/trakt/: trakt.cabal
backend/trakt/src/: Trakt.hs
backend/trakt/src/Trakt/: Calls.hs  Client.hs  Instances.hs  Models.hs
backend/updater/: build.sh  teevy-updater.cabal
backend/updater/src/Teevy/Updater/: Main.hs
backend/webservice/: teevy-webservice.cabal
backend/webservice/src/Teevy/: Main.hs  Messages.hs  Scotty.hs  Text.hs
backend/webservice/src/Teevy/Messages/Commands/: Instances.hs  Models.hs
backend/webservice/src/Teevy/Messages/Responses/: Instances.hs  Models.hs
backend/webservice/src/Teevy/Services/: ApiCall.hs  ExploreService.hs  LoginFacebook.hs  ShowService.hs  StatService.hs  SubscriptionService.hs  UserService.hs  Validations.hs
frontend/: .gitignore  Gruntfile.js  bower.json  build.sh  config.rb
frontend/javascripts/: app.js  landing.js
frontend/sass/: _shame.scss  main.scss
frontend/sass/modules/: _dashboard.scss  _flipper.scss
frontend/static/: app.html  index.html
infra/: do.json
infra/puppet/manifests/: hiera-dev.yaml  hiera-do.yaml  init.pp
infra/puppet/manifests/hiera/: dev.yaml  prod.yaml
infra/puppet/modules/teevy/files/: build.sh  control.descriptor
infra/puppet/modules/teevy/manifests/: init.pp  swap.pp
infra/puppet/modules/teevy/templates/: teevy.conf.erb
packaging/: build.sh  control.descriptor
releases/: installdb.sh
releases/1.0.0/: teevy.sql
releases/1.0.1/: indexes.sql
releases/1.0.2/: indexes.sql
releases/1.0.3/: facebook_users.sql  rename_subscription.sql
releases/1.0.4/: to_users.sql
