author:              Mark
maintainer:          mail@markdejong.org
category:            Web
build-type:          Simple
cabal-version:       >=1.10
name:                teevy-shared
version:             0.1.0.2

library
  default-language: Haskell2010
  ghc-options:      -Wall -fno-warn-orphans

  hs-source-dirs:   src
  exposed-modules:  Teevy.Shared.Config, Teevy.Shared.Log, Teevy.Shared.TmdbConversion

  build-depends:    base, 
                    configurator,
                    bytestring,
                    postgresql-simple,
                    directory,
                    hsyslog,
                    text >=1.1.0.0,
                    teevy-database,
                    tmdb