author:              Mark
maintainer:          mail@markdejong.org
category:            Web
build-type:          Simple
cabal-version:       >=1.10
name:                tmdb
version:             0.1.0.1

library
  default-language: Haskell2010
  ghc-options:      -Wall -fno-warn-orphans

  hs-source-dirs:   src
  exposed-modules:  Tmdb, Tmdb.Instances, Tmdb.Client, Tmdb.Calls, Tmdb.Models

  build-depends:    base, 
                    text >=1.1.0.0,
                    bytestring==0.10.0.2,
                    aeson >= 0.6.2.1 && <0.8,
                    ghc-prim,
                    mtl>=2.1.2 && <2.2,
                    time,
                    utf8-string,
                    dataenc,
                    old-locale,
                    async,
                    
                    -- forcing http-conduit to slow down on its dependencies
                    case-insensitive == 1.1.0.3,
                    conduit == 1.0.17.1,
                    http-conduit == 2.0.0.1,
                    http-client == 0.2.3.1
                    -- end force