name:                teevy-updater
version:             0.1.0.0
author:              markdj
maintainer:          mail@markdejong.org
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable teevy-updater

  ghc-options:         -Wall -fno-warn-orphans
  
  main-is:             Teevy/Updater/Main.hs

  build-depends:       base, 
                       teevy-shared,
                       teevy-database,
                       tmdb,
                       trakt,
                       postgresql-simple,
                       text >=1.1.0.0,
                       network

  hs-source-dirs:      src
  default-language:    Haskell2010